--- a/demo/package.json
+++ b/demo/package.json
@@ -20,7 +20,8 @@
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.6.0"
+    "react-navigation-tabs": "^2.6.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
